--- a/css/main.css
+++ b/css/main.css
@@ -41,9 +41,60 @@ body {
    height: auto;
 }
 
+.columna-izquierda ul {
+	margin:0;
+	padding: 0;
+	list-style:none;
+}
+
+.columna-izquierda ul li {
+	margin: 10px 0;
+}
+
+.columna-izquierda ul li div {
+	width: 45px;
+	height: 45px;
+	display: inline-block;
+	margin-right:5px;
+	vertical-align: middle;
+	background-image: url(../img/sprites-social.png);
+
+}
+
+.columna-izquierda ul li:first-of-type div {
+    
+	background-position: 0px 45px;
+
+}
+
+.columna-izquierda ul li:nth-child(2) div {
+    
+	background-position: -368px 46px;
+
+}
+
+.columna-izquierda ul li:last-child div {
+    
+	background-position: -184px 46px;
+
+}
+
+.columna-izquierda ul li a {
+	color: black;
+	text-decoration: none;
+}
+
 .columna-derecha {
 	width: 70%;
 	float: right;
+}
+
+.columna-derecha h1 {
+    margin: 0 0 5px 0;
+}
+
+.columna-derecha h2 {
+   margin-top: 0;
 }
 
 /* Dev */
