--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,19 @@ body {
 
 }
 
-#contenedor {
+ul {
+	margin:0;
+	padding: 0;
+	list-style:none;
+}
+
+.contenedor {
 	display:table-cell;
 	text-align: center;
 	vertical-align:middle;
 }
 
-#contenido {
+.contenido {
 	width: 800px;
 	min-height: 400px;
 	background-color: rgba(255,255,255,0.8);
@@ -41,11 +47,7 @@ body {
    height: auto;
 }
 
-.columna-izquierda ul {
-	margin:0;
-	padding: 0;
-	list-style:none;
-}
+  
 
 .columna-izquierda ul li {
 	margin: 10px 0;
@@ -84,6 +86,10 @@ body {
 	text-decoration: none;
 }
 
+#proyectos h3 {
+    text-align: center;
+}
+
 .columna-derecha {
 	width: 70%;
 	float: right;
@@ -97,11 +103,31 @@ body {
    margin-top: 0;
 }
 
+#proyectos {
+	min-height: 100px;
+
+}
+
+#proyectos ul li {
+	
+	display: inline-block;
+	width: 150px;
+	height: 150px;
+	margin-right: 5px;
+
+}
+#proyectos ul li:last-of-type{
+	margin-right: 0;
+
+}
+
 /* Dev */
 .brojo {
    border: 1px dashed red;
 }
 
 .clearfix {
+
+	clear:both;
 
 }
